--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
     </div>
     <!--鸡汤区-->
-    <p class="day_goodStudy" th:text='点一下试试'></p>
+    <p class="day_goodStudy">点一下试试</p>
 </div>
 <!--鼠标移动效果-->
 <!--<canvas></canvas>-->
