--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org" onclick="getDayStudy()">
 <head>
     <meta charset="UTF-8">
-    <title>DJ</title>
+    <title>毒鸡汤</title>
     <script src="src/main/resources/static/goodStudy.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="src/main/resources/static/wallpaper/smortIcon.png" />
     <link rel="Bookmark" href="src/main/resources/static/wallpaper/smortIcon.png">
